# dungeon-breeder

./: .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: app.rs  components.rs  data.rs  localization.rs  main.rs  modals.rs  state.rs  systems.rs  theme.rs  views.rs  windows.rs
app/src/app/: bug_report.rs  performance_info.rs  persistence.rs  runtime_info.rs  snapshot.rs  system_info.rs
app/src/app/persistence/: migration.rs
app/src/components/: asc_desc_button.rs  bug_report_meta.rs  changelog.rs  compendium.rs  dungeon.rs  enum_select.rs  game_menu_button.rs  generic_select.rs  number_range_dropdown_select.rs  progress_report.rs  system_info.rs  tips.rs  toggle_button.rs  value_button.rs  window_button.rs
app/src/components/avatar/: mod.rs  portrait.rs
app/src/components/compendium/: creatures.rs  items.rs
app/src/components/creature/: id_select.rs  mod.rs  sprite.rs
app/src/components/dialogue/: dialogue_box.rs  mod.rs
app/src/components/dungeon/: dungeon.rs  layer.rs  layer_slot.rs  mod.rs  specimen.rs
app/src/components/dungeon/legacy/: layer.rs  layer_slot.rs  layered.rs  mod.rs
app/src/components/dungeon/specimen/: slot.rs
app/src/components/item/: table.rs
app/src/components/progress_report/: items.rs  stats.rs
app/src/components/specimen/: dropdown_selection.rs  info.rs  mod.rs  modal_selection.rs  overview.rs  selection.rs  sorted_table.rs  spawn.rs  table.rs
app/src/components/specimen/selection/: options.rs  state.rs
app/src/components/specimen/sorted_table/: column_config.rs
app/src/data/: changelogs.rs  planned_features.rs  tip.rs
app/src/data/changelogs/: v0_1_0_alpha.rs  v0_2_0_alpha.rs
app/src/localization/: language.rs
app/src/modals/: confirm.rs  offline_progress.rs  specimen_selection.rs
app/src/systems/: actions.rs  bug_report_review.rs  debug_stats.rs  dialogue.rs  file_picker.rs  settings.rs  textures.rs  tips.rs  toasts.rs
app/src/types/: color.rs  font.rs
app/src/utils/: formatting.rs
app/src/views/: game.rs  main_menu.rs
app/src/windows/: breeding.rs  bug_report.rs  changelog.rs  compendium.rs  debug.rs  debug_window.rs  dungeon.rs  fusion.rs  items.rs  settings.rs  specimen.rs  statistics.rs  summon.rs  tips.rs
app/src/windows/debug_window/: dungeon.rs  items.rs  specimen.rs
app/src/windows/debug_windows/: bug_report.rs  dialogue.rs  flags.rs  font.rs  mod.rs  specimen_spawn.rs  stats.rs  time.rs  tips.rs
assets/icons/: icon_512x512.icns
assets/translations/en-US/: common.ftl  main_menu.ftl
core/: Cargo.toml
core/src/: actions.rs  clock.rs  config.rs  creature.rs  data.rs  error.rs  events.rs  feedback.rs  item.rs  lib.rs  mechanics.rs  state.rs  systems.rs  types.rs  update_report.rs  utils.rs
core/src/actions/: action.rs  feedback.rs  report.rs
core/src/actions/action/: add_coins.rs  assign_to_dungeon_layer_slot.rs  breed.rs  debug_dialogue_bg_interactive.rs  debug_skip_time.rs  dialogue_action.rs  dialogue_trigger.rs  fuse.rs  random_specimen.rs  reset_game_state.rs  sell_item.rs  set_flag.rs  spawn_specimen.rs  summon_creature.rs  unlock_dungeon_layer.rs  unlock_dungeon_layer_slot.rs
core/src/creature/: data.rs  def.rs  id.rs  library.rs  specimen.rs  tier.rs
core/src/data/: config.rs  creature.rs  dialogue.rs  flags.rs  item.rs
core/src/data/avatar/: data.rs  def.rs  id.rs
core/src/data/character/: data.rs  def.rs  id.rs
core/src/data/config/: styles.rs
core/src/data/creature/: data.rs  def.rs  id.rs
core/src/data/creature/data/: baragoo.rs  borok.rs  gonk.rs  lefkaroria.rs  nihi.rs  slime.rs  tinky.rs  uggroot.rs
core/src/data/creature/def/: item_drop.rs  tier.rs
core/src/data/dialogue/: action.rs  condition.rs  data.rs  entry.rs  event.rs  id.rs  options.rs
core/src/data/dialogue/data/: tutorial.rs
core/src/data/item/: data.rs  def.rs  id.rs
core/src/events/: event.rs
core/src/events/event/: do_skip_time.rs  do_specimen_tick_slay_regen.rs  item_obtained.rs  item_sold.rs  specimen_bred.rs  specimen_fused.rs  specimen_obtained.rs  specimen_slain.rs  specimen_tick_slay_regen.rs
core/src/feedback/: notification.rs
core/src/item/: data.rs  def.rs  id.rs
core/src/mechanics/: breeding.rs  fusion.rs  progression.rs  upgrade_costs.rs
core/src/state/: breeding.rs  clock.rs  dialogue.rs  dungeon.rs  flags.rs  fusion.rs  item.rs  specimen.rs  statistics.rs  summoning.rs  timer.rs  treasury.rs  update_report.rs
core/src/state/breeding/: stat_trends.rs
core/src/state/dungeon/: layer.rs
core/src/state/dungeon/layer/: slot.rs
core/src/state/fusion/: simulation.rs
core/src/state/item/: collection.rs  compendium.rs
core/src/state/specimen/: collection.rs  compendium.rs  obtain_method.rs
core/src/systems/: breeding.rs  fusion.rs
core/src/types/: color.rs  flag.rs  sort_direction.rs  specimen_stat.rs  trend.rs
core/src/update/: report.rs
core/src/utils/: bit_vec.rs  math.rs  random.rs
