[workspace]
members = ["core", "app"]
resolver = "2"

[workspace.dependencies]
dungeon-breeder-core = { path = "core" }
chrono = { version = "0.4.41", features = ["serde"] }
humantime = "2.2.0"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"