[workspace]
members = ["core", "app"]
resolver = "2"

[workspace.dependencies]
dungeon-breeder-core = { path = "core" }
bitvec = { version = "1.0.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
humantime = "2.2.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.41"
zstd = "0.13.3"