[package]
name = "dungeon-breeder-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { workspace = true }
dungeon-breeder-core = { workspace = true }
eframe = { version = "0.32.1", features = ["persistence", "wgpu"] }
egui = { version = "0.32.1", features = ["persistence"] }
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
egui-phosphor = { version = "0.10.0", default-features = false, features = ["regular"] }
egui_extras = "0.32.1"
humantime = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
sysinfo = { version = "0.37.0", features = ["serde", "windows"] }
zstd = { workspace = true }
