[package]
name = "dungeon-breeder-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = ["tracing-subscriber", "tracing-tracy"]
tracing-off = ["dungeon-breeder-core/tracing-off", "tracing/max_level_off", "tracing/release_max_level_off"]

[dependencies]
anyhow = "1.0.99"
chrono = { workspace = true }
dungeon-breeder-core = { workspace = true }
eframe = { version = "0.32.1", features = ["persistence", "wgpu"] }
egui = { version = "0.32.1", features = ["persistence"] }
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
egui-phosphor = { version = "0.10.0", default-features = false, features = ["regular"] }
egui_extras = "0.32.1"
humantime = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
sysinfo = { version = "0.37.0", features = ["serde", "windows"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
zstd = { workspace = true }