[package]
name = "dungeon-breeder-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracy = ["tracing-subscriber", "tracing-tracy"]
tracing-off = ["dungeon-breeder-core/tracing-off", "tracing/max_level_off", "tracing/release_max_level_off"]

[dependencies]
anyhow = "1.0.99"
chrono = { workspace = true }
directories = "6.0.0"
dungeon-breeder-core = { workspace = true }
eframe = { version = "0.32.1", features = ["persistence", "wgpu"] }
egui = { version = "0.32.1", features = ["persistence"] }
egui-file-dialog = "0.11.0"
egui-notify = "0.20.0"
egui-phosphor = { version = "0.10.0", default-features = false, features = ["regular"] }
egui_extras = "0.32.1"
humantime = { workspace = true }
image = { version = "0.25.8", default-features = false, features = ["png"] }
num-traits = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = { version = "0.37.0", features = ["serde", "windows"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
webbrowser = "1.0.5"
zstd = { workspace = true }

[build-dependencies]
winresource = "0.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[package.metadata.bundle]
name = "Dungeon Breeder"
identifier = "io.github.Zitronenjoghurt.dungeon-breeder"
short_description = "An idle game about funding your monster research by managing your own dungeon."
icon = ["assets/icons/icon_512x512.png", "assets/icons/icon_256x256.png", "assets/icons/icon_128x128.png", "assets/icons/icon_64x64.png", "assets/icons/icon_512x512.icns"]

[package.metadata.winresource]
