[package]
name = "dungeon-breeder-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing-off = ["tracing/max_level_off", "tracing/release_max_level_off"]

[dependencies]
bitvec = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = "2.0.16"
tracing = { workspace = true }